<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <View
                android:id="@+id/upperHalf"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.5"/>

        <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/upperHalf"
                android:layout_margin="@dimen/margin"
                android:stretchColumns="1">
            <TableRow>
                <TextView
                        android:id="@+id/headingBalance"
                        style="@style/cell_heading"
                        android:text="@string/balance"/>
                <TextView
                        android:id="@+id/headingCommissions"
                        style="@style/cell_heading"
                        android:text="@string/commissions"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:id="@+id/eurBalanceValue"
                        style="@style/cell_value"/>
                <TextView
                        android:id="@+id/eur"
                        style="@style/cell_currency"
                        android:text="@string/EUR"/>
                <TextView
                        android:id="@+id/eurCommissionsValue"
                        style="@style/cell_value"/>
                <TextView
                        android:id="@+id/eurCommissions"
                        style="@style/cell_currency"
                        android:text="@string/EUR"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:id="@+id/usdBalanceValue"
                        style="@style/cell_value"/>
                <TextView
                        android:id="@+id/usd"
                        style="@style/cell_currency"
                        android:text="@string/USD"/>
                <TextView
                        android:id="@+id/usdCommissionsValue"
                        style="@style/cell_value"/>
                <TextView
                        android:id="@+id/usdCommissions"
                        style="@style/cell_currency"
                        android:text="@string/USD"/>
            </TableRow>
            <TableRow>
                <TextView
                        android:id="@+id/jpyBalanceValue"
                        style="@style/cell_value"/>
                <TextView
                        android:id="@+id/jpy"
                        style="@style/cell_currency"
                        android:text="@string/JPY"/>
                <TextView
                        android:id="@+id/jpyCommissionsValue"
                        style="@style/cell_value"/>
                <TextView
                        android:id="@+id/jpyCommissions"
                        style="@style/cell_currency"
                        android:text="@string/JPY"/>
            </TableRow>
        </TableLayout>

        <EditText
                android:id="@+id/amountToConvert"
                android:inputType="numberDecimal"
                android:ems="10"
                app:layout_constraintTop_toTopOf="@id/radioGroupFrom"
                app:layout_constraintBottom_toBottomOf="@id/radioGroupFrom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/radioGroupFrom"
                android:hint="@string/amount"
                android:background="@drawable/border"
                android:layout_margin="8dp"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:cursorVisible="true"
                android:textSize="@dimen/text_size_smallest"/>

        <RadioGroup
                android:id="@+id/radioGroupFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/upperHalf"
                app:layout_constraintStart_toEndOf="@id/amountToConvert"
                app:layout_constraintEnd_toStartOf="@id/to">

            <RadioButton
                    android:id="@+id/fromEur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur"
                    android:layout_marginBottom="8dp"/>

            <RadioButton
                    android:id="@+id/fromUsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"/>

            <RadioButton
                    android:id="@+id/fromJpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jpy"
                    android:layout_marginTop="8dp"/>
        </RadioGroup>

        <TextView
                android:id="@+id/to"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:text="@string/to"
                android:gravity="center"
                android:textSize="@dimen/text_size_smallest"
                app:layout_constraintBottom_toBottomOf="@id/radioGroupFrom"
                app:layout_constraintTop_toTopOf="@id/radioGroupFrom"
                app:layout_constraintStart_toEndOf="@id/radioGroupFrom"
                app:layout_constraintEnd_toStartOf="@id/radioGroupFrom"
                android:layout_margin="8dp"/>

        <RadioGroup
                android:id="@+id/radioGroupTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/upperHalf"
                app:layout_constraintStart_toEndOf="@id/to"
                app:layout_constraintEnd_toStartOf="@id/convert">

            <RadioButton
                    android:id="@+id/toEur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur"
                    android:layout_marginBottom="8dp"/>

            <RadioButton
                    android:id="@+id/toUsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd"/>

            <RadioButton
                    android:id="@+id/toJpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jpy"
                    android:layout_marginTop="8dp"/>
        </RadioGroup>

        <Button
                android:id="@+id/convert"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:background="@color/colorAccent"
                android:text="@string/convert"
                app:layout_constraintTop_toBottomOf="@id/radioGroupFrom"
                app:layout_constraintTop_toTopOf="@id/radioGroupFrom"
                app:layout_constraintBottom_toBottomOf="@id/radioGroupFrom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/radioGroupTo"
                android:layout_margin="8dp"/>
        <TextView
                android:id="@+id/infoMessage"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupFrom"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"
                android:textSize="@dimen/text_size_small"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>